# ripasso

./: .gitignore  .rustfmt.toml  .travis.yml  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  TRANSLATIONS.md  default.nix  flake.nix  generate_pot.sh
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: CodeQL.yml  rust.yml  zizmor.yml
benches/: library_benchmark.rs
crates/ripasso/: Cargo.toml
crates/ripasso-cursive/: Cargo.toml  build.rs
crates/ripasso-cursive/res/: de.po  es.po  fr.po  ripasso-cursive.pot  ru.po  style.toml
crates/ripasso-cursive/src/: helpers.rs  main.rs  wizard.rs
crates/ripasso-cursive/src/tests/: helpers.rs
crates/ripasso-gtk/: Cargo.toml  build.rs
crates/ripasso-gtk/src/: main.rs  utils.rs
crates/ripasso-gtk/src/collection_object/: imp.rs  mod.rs
crates/ripasso-gtk/src/password_object/: imp.rs  mod.rs
crates/ripasso-gtk/src/resources/: shortcuts.ui  window.ui
crates/ripasso-gtk/src/window/: imp.rs  mod.rs
crates/ripasso/benches/: library_benchmark.rs
crates/ripasso/src/: crypto.rs
crates/ripasso/src/tests/: crypto.rs  git.rs  pass.rs  password_generator.rs  test_helpers.rs
cursive/: Cargo.toml  README.md  build.rs
cursive/res/: de.po  fr.po  it.po  nb.po  nn.po  ripasso-cursive.pot  ru.po  sv.po
cursive/src/: .main.rs.swo  .main.rs.swp  helpers.rs  main.rs  wizard.rs
cursive/src/tests/: helpers.rs  main.rs
gnome_search_provider/: Cargo.toml  README.md  install.sh
gnome_search_provider/conf/: org.gnome.Ripasso.SearchProvider.desktop  org.gnome.Ripasso.SearchProvider.service.dbus  org.gnome.Ripasso.SearchProvider.service.systemd  org.gnome.Ripasso.search-provider.ini
gnome_search_provider/src/: main.rs
gtk/: Cargo.toml
gtk/res/: ripasso.ui.xml
gtk/src/: com.github.cortex.ripasso-gtk.gschema.xml  main.rs  utils.rs
gtk/src/collection_object/: imp.rs  mod.rs
gtk/src/password_object/: imp.rs  mod.rs
gtk/src/resources/: resources.gresource.xml
gtk/src/window/: imp.rs  mod.rs
man/: Cargo.toml
man/src/: main.rs
qmetaobject/: Cargo.toml  build.rs
qmetaobject/res/: main.qml
qmetaobject/src/: main.rs
qml/: Cargo.toml
qml/res/: main.qml
qml/src/: main.rs
res/: main.qml  ripasso.ui
src/: .lib.rs.swp  .pass.rs.swp  crypto.rs  error.rs  git.rs  gtkui.rs  lib.rs  main.rs  pass.rs  pass.rs.fmt  pass2.rs  passphrase_generator.rs  password_generator.rs  qmlui.rs  signature.rs  tui.rs  words.rs
src/pass/: test.rs  test_helpers.rs
src/tests/: .password_generator.rs.swp  crypto.rs  git.rs  pass.rs  password_generator.rs  signature.rs  test_helpers.rs  words.rs
src/wordlists/: eff_large.wordlist
src/words/: test.rs
tests/: pass2_test.rs  pass_test.rs
