[package]
name = "ripasso"
description = "A password manager that uses the file format of the standard unix password manager 'pass'"
repository = "https://github.com/cortex/ripasso/"
keywords = ["password-manager", "pass"]
version = "0.7.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"
edition = '2024'

[dependencies]
arboard = "3"
glob = "0.3"
gpgme = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
git2 = "0.20"
rand = "0.8"
whoami = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
hex = "0.4"
totp-rs = { version = "5", features = ["otpauth"] }
sequoia-openpgp = "2"
anyhow = "1"
sequoia-gpg-agent = "0.6"
zeroize = { version = "1", features = ["zeroize_derive", "alloc"] }

[dependencies.config]
version = "0.15"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3"
flate2 = "1"
tar = "0.4"
criterion = "0.5"

[workspace]

members = [
    "gtk", "cursive"
]

[[bench]]
name = "library_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
