[workspace]
members = ["crates/ripasso", "crates/ripasso-cursive", "crates/ripasso-gtk"]
resolver = "2"

[workspace.package]
rust-version = "1.91"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]
repository = "https://github.com/cortex/ripasso/"
version = "0.8.0"

[workspace.dependencies]
# local crates
ripasso = { path = "./crates/ripasso", version = "0.8.0" }
ripasso-cursive = { path = "./crates/ripasso-cursive", version = "0.8.0" }
ripasso-gtk = { path = "./crates/ripasso-gtk", version = "0.8.0" }

# non-local crates
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", default-features = false }
config = { version = "0.15", default-features = false }
criterion = "0.8"
cursive = { version = "0.21", default-features = false }
flate2 = "1"
gettext = "0.4"
git2 = "0.20"
glib = "0.20"
glib-build-tools = "0.20"
glob = "0.3"
gpgme = "0.11"
gtk4 = "0.9"
hex = "0.4"
libadwaita = "0.7"
locale_config = "0.3"
man = "0.3"
once_cell = "1"
rand = "0.10"
reqwest = "0.13"
sequoia-gpg-agent = "0.6"
sequoia-openpgp = "2"
tar = "0.4"
tempfile = "3"
terminal_size = "0.4"
thiserror = "2"
toml = "0.9"
totp-rs = "5"
unic-langid = "0.9"
whoami = "2"
zeroize = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false

[workspace.lints.clippy]
pedantic = "warn"
