[package]
name = "ripasso-cursive"
description = "A password manager that uses the file format of the standard unix password manager 'pass', this is the ncurses frontend application"
repository = "https://github.com/cortex/ripasso/"
keywords = ["password-manager", "pass"]
version = "0.6.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"
edition = '2021'
build = "build.rs"

[dependencies]
cursive = { version = "0.17.0", default-features = false, features = ["toml", "crossterm-backend"]}
clipboard = "0.5"
ripasso = { path = "../", version = "0.6.0-alpha" }
locale_config = "0.3.0"
unic-langid = "0.9.0"
gettext = "0.4.0"
lazy_static = "1.4.0"
toml = "0.5.8"
term_size = "0.3.2"
wl-clipboard-rs = "0.6.0"
hex = "0.4.3"

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.3.0"
chrono = "0.4"

[build-dependencies]
glob = "0.3.0"
man = "0.3.0"
