[package]
name = "ripasso-cursive"
description = "A password manager that uses the file format of the standard unix password manager 'pass', this is the ncurses frontend application"
repository = "https://github.com/cortex/ripasso/"
keywords = ["password-manager", "pass"]
categories = ["command-line-utilities"]
version = "0.7.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"
edition = '2021'
build = "build.rs"

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = ["toml", "crossterm-backend"]}
arboard = { version = "3.3.0", features = ["wayland-data-control"]}
ripasso = { path = "../", version = "0.7.0-alpha" }
locale_config = "0.3.0"
unic-langid = "0.9.4"
gettext = "0.4.0"
lazy_static = "1.4.0"
toml = "0.8.10"
terminal_size = "0.3.0"
hex = "0.4.3"
zeroize = { version = "1.7.0", features = ["zeroize_derive", "alloc"] }

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.10.1"
chrono = { version = "0.4", default_features = false, features = ["clock"] }

[build-dependencies]
glob = "0.3.1"
man = "0.3.0"
