[package]
name = "ripasso-cursive"
description = "A password manager that uses the file format of the standard unix password manager 'pass', this is the ncurses frontend application"
repository = "https://github.com/cortex/ripasso/"
keywords = ["password-manager", "pass"]
categories = ["command-line-utilities"]
version = "0.7.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]
license = "GPL-3.0-only"
edition = '2021'
build = "build.rs"

[dependencies]
cursive = { version = "0.21", default-features = false, features = ["toml", "crossterm-backend"]}
arboard = { version = "3", features = ["wayland-data-control"]}
ripasso = { path = "../", version = "0.7.0-alpha" }
locale_config = "0.3"
unic-langid = "0.9"
gettext = "0.4"
lazy_static = "1"
terminal_size = "0.4"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive", "alloc"] }

[dependencies.config]
version = "0.15"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.10.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
glob = "0.3"
man = "0.3"
