[package]
name = "ripasso-gtk"
version = "0.7.0-alpha"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>", "Alexander Kjäll <alexander.kjall@gmail.com>"]
edition = "2021"


[dependencies]
ripasso = { path = "../", version = "0.7.0-alpha" }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_6"] }
adw = { version = "0.7.1", package = "libadwaita" }
glib = "0.20.7"
once_cell = "1.19.0"
hex = "0.4.3"
config = "0.15.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[build-dependencies]
glib-build-tools = "0.20.0"
