[package]
name = "qmetaobject"
version = "0.1.0"
authors = ["Joakim Lundborg <joakim.lundborg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = "0.1.4"
cstr = "0.1.7"
cpp = "0.5.4"

[build-dependencies]
cpp_build = "0.5"